# Meterstanden

./: .gitignore  .python-version  CHANGELOG.md  Pipfile  README.md  matplotlib_example_simple.py  pyproject.toml  version.txt
Data/: Meterstanden.csv
Meterstanden/: Controle_SMA_berekening.html  Meterstanden-pd-bokeh.ipynb  Meterstanden-pd-hv.ipynb  Meterstanden-pd-mpl.ipynb  Meterstanden.csv  Ratio_Zonnepanelen.html  Verbruik_Elektriciteit.html  Verbruik_Elektriciteit_per_dag.html  Verbruik_Gas.html  Verbruik_Gas_per_dag.html  Verbruik_Water.html  meterstanden.py  meterstanden_bokeh.py
Notebooks/: Meterstanden-pd-bokeh.ipynb  Meterstanden-pd-hv.ipynb  Meterstanden-pd-mpl.ipynb  SunnyPortal.ipynb
Python/: dark.mplstyle  data.py  drawing_canvas.py  main.py  main_window.py  main_window.ui  meterstanden-np-mpl.py  overlap.py
Python/.ipynb_checkpoints/: Meterstanden-checkpoint.ipynb  Meterstanden-pd-bokeh-checkpoint.ipynb  Meterstanden-pd-hv-checkpoint.ipynb
