[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meterstanden"
description = "Keep track of my energy consumption"
dynamic = ["readme"]
version = "1.0.0"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rik Huygen", email = "rik.huygen@me.com"},
]

dependencies = [
    "rich >= 13",
    "numpy",
    "logme",
    "pandas",
    "matplotlib",
    "seaborn",
    "qdarkstyle",
    "pyqt5",
    "cycler",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["Python"]
